force-app/main/default/objects/Partner_Course__c/Partner_Course__c.object-meta.xml
<CustomObject>
    <description>Partner course details from Netexam
Tick Allow Reports, Allow Activities, Track Field History
Click Save</description>
    <label>Partner Course</label>
    <nameField>
        <displayFormat>PC-{00000000}</displayFormat>
        <label>Partner Course Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>