force-app/main/default/objects/Partner_Course__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partner Courses</relationshipLabel>
    <relationshipName>Partner_Courses</relationshipName>
    <type>Lookup</type>
</CustomField>