force-app/main/default/objects/Partner_Course__c/fields/Course_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_Expiration_Date__c</fullName>
    <formula>Course_Completed_Date__c + 720</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Expiration Date</label>
    <type>Date</type>
</CustomField>