force-app/main/default/objects/Partner_Course__c/fields/Course_Score__c.field-meta.xml
<CustomField>
    <fullName>Course_Score__c</fullName>
    <label>Course Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>