force-app/main/default/objects/Partner_Course__c/fields/Course_Status__c.field-meta.xml
<CustomField>
    <fullName>Course_Status__c</fullName>
    <formula>IF( AND( NOT( ISNULL( Course_Completed_Date__c)), Course_Expiration_Date__c &gt;= TODAY() ), &apos;Completed&apos;, 
IF( Days_Valid__c &lt; 0, &apos;Expired&apos;, 
IF(NOT( OR( ISNull(NetExam_Course_Status__c ),ISBlank( NetExam_Course_Status__c ) )), NetExam_Course_Status__c , &apos;Enrolled&apos; )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Status</label>
    <type>Text</type>
</CustomField>