force-app/main/default/objects/Partner_Course__c/fields/Days_Valid__c.field-meta.xml
<CustomField>
    <fullName>Days_Valid__c</fullName>
    <formula>Course_Expiration_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Valid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>