force-app/main/default/objects/Partner_Course__c/fields/Partner_Course__c.field-meta.xml
<CustomField>
    <fullName>Partner_Course__c</fullName>
    <displayFormat>PC-{00000000}</displayFormat>
    <label>Partner Course</label>
    <type>AutoNumber</type>
</CustomField>