force-app/main/default/objects/Partner_Course__c/fields/Partner_Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Course_Name__c</fullName>
    <formula>Account__r.Name &amp; &quot; - &quot; &amp; Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName &amp; &quot; - &quot; &amp; Course__r.Course_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Course Name</label>
    <type>Text</type>
</CustomField>